--- a/.gitmodules
+++ b/.gitmodules
@@ -1,26 +1,26 @@
-[submodule "imgui"]
-	path = imgui
-	url = https://github.com/ocornut/imgui.git
-	branch = docking
-[submodule "raylib"]
-	path = raylib
-	url = https://github.com/raysan5/raylib.git
-[submodule "ImGuiColorTextEdit"]
-	path = ImGuiColorTextEdit
-	url = https://github.com/luis605/ImGuiColorTextEdit.git
-	branch = main
-[submodule "ImNodes"]
-	path = ImNodes
-	url = https://github.com/luis605/ImNodes.git
-[submodule "bullet3"]
-    path = bullet3
+[submodule "include/imgui"]
+    path = include/imgui
+    url = https://github.com/ocornut/imgui.git
+    branch = docking
+[submodule "include/raylib"]
+    path = include/raylib
+    url = https://github.com/raysan5/raylib.git
+[submodule "include/ImGuiColorTextEdit"]
+    path = include/ImGuiColorTextEdit
+    url = https://github.com/luis605/ImGuiColorTextEdit.git
+    branch = main
+[submodule "include/ImNodes"]
+    path = include/ImNodes
+    url = https://github.com/luis605/ImNodes.git
+[submodule "include/bullet3"]
+    path = include/bullet3
     url = https://github.com/bulletphysics/bullet3.git
-[submodule "ffmpeg"]
-    path = ffmpeg
+[submodule "include/ffmpeg"]
+    path = include/ffmpeg
     url = https://github.com/FFmpeg/FFmpeg.git
-[submodule "meshoptimizer"]
-    path = meshoptimizer
+[submodule "include/meshoptimizer"]
+    path = include/meshoptimizer
     url = https://github.com/zeux/meshoptimizer.git
 [submodule "include/nlohmann"]
-	path = include/nlohmann
-	url = https://github.com/nlohmann/json.git
+    path = include/nlohmann
+    url = https://github.com/nlohmann/json.git
