Reset 'trying to fix a bug...'

--- a/project.json
+++ b/project.json
@@ -2,15 +2,15 @@
     {
         "fovy": 60.0,
         "position": {
-            "x": -104.4278335571289,
-            "y": 67.5073013305664,
-            "z": 40.850894927978516
+            "x": -18.335145950317383,
+            "y": 10.797852516174316,
+            "z": -0.38022381067276
         },
         "projection": 0,
         "target": {
-            "x": -99.3106689453125,
-            "y": 59.45741271972656,
-            "z": 37.24424743652344
+            "x": -8.809537887573242,
+            "y": 7.159833908081055,
+            "z": -0.22734671831130981
         },
         "type": "camera",
         "up": {
@@ -22,20 +22,20 @@
     {
         "ambientColor": {
             "w": 1.0,
-            "x": 0.0,
-            "y": 0.0,
-            "z": 0.0
+            "x": 0.23430167138576508,
+            "y": 0.22495272755622864,
+            "z": 0.3478260636329651
         },
         "bloom": false,
         "bloomBrightness": 0.0,
         "bloomSamples": 3.0,
         "skyboxColor": {
-            "w": 1.0,
-            "x": 0.0,
-            "y": 0.0,
-            "z": 0.0
+            "w": 0.9921568632125854,
+            "x": 9.22722028917633e-05,
+            "y": 0.0033880178816616535,
+            "z": 0.0117647061124444
         },
-        "skyboxPath": "assets/images/skybox/default skybox.hdr",
+        "skyboxPath": "project/game/images/kloppenheim_02_puresky_4k.hdr",
         "type": "world settings"
     },
     {
@@ -149,6 +149,47 @@
         "type": "entity"
     },
     {
+        "children": [
+            [
+                {
+                    "attenuation": 0.039000000804662704,
+                    "color": {
+                        "a": 255.0,
+                        "b": 255.0,
+                        "g": 152.9160614013672,
+                        "r": 111.44445037841797
+                    },
+                    "cutOff": 10.0,
+                    "direction": {
+                        "x": 0.4000000059604645,
+                        "y": 0.4000000059604645,
+                        "z": -0.4000000059604645
+                    },
+                    "id": 40,
+                    "intensity": 0.8130000233650208,
+                    "isChild": true,
+                    "light_type": 1,
+                    "name": "Light",
+                    "position": {
+                        "x": 1.200002670288086,
+                        "y": 4.299997329711914,
+                        "z": 0.10000061243772507
+                    },
+                    "relativePosition": {
+                        "x": 0.2000027298927307,
+                        "y": -9.5367431640625e-06,
+                        "z": 0.10000061243772507
+                    },
+                    "specularStrength": 0.0,
+                    "target": {
+                        "x": 0,
+                        "y": 0,
+                        "z": 0
+                    },
+                    "type": "light"
+                }
+            ]
+        ],
         "collider": true,
         "collider_type": 0,
         "damping": 0.0,
@@ -163,7 +204,7 @@
         "name": "Player",
         "normalTexturePath": "",
         "position": {
-            "x": 0.0,
+            "x": 0.9999999403953552,
             "y": 4.300006866455078,
             "z": 0.0
         },
@@ -1744,7 +1785,7 @@
         "type": "entity"
     },
     {
-        "attenuation": 0.007000000216066837,
+        "attenuation": 0.004999999888241291,
         "color": {
             "a": 255.0,
             "b": 204.94444274902344,
@@ -1757,11 +1798,11 @@
             "y": 0.4000000059604645,
             "z": -0.4000000059604645
         },
-        "id": 32,
-        "intensity": 1.2549999952316284,
+        "id": -1087224663,
+        "intensity": 0.4950000047683716,
         "isChild": false,
         "light_type": 1,
-        "name": "Light",
+        "name": "",
         "position": {
             "x": 4.0,
             "y": 23.30006980895996,
@@ -1794,7 +1835,7 @@
             "y": 0.4000000059604645,
             "z": -0.4000000059604645
         },
-        "id": 33,
+        "id": -1087224663,
         "intensity": 1.2549999952316284,
         "isChild": false,
         "light_type": 1,
@@ -1831,7 +1872,7 @@
             "y": 0.4000000059604645,
             "z": -0.4000000059604645
         },
-        "id": 34,
+        "id": -1087224663,
         "intensity": 1.2549999952316284,
         "isChild": false,
         "light_type": 1,
@@ -1868,7 +1909,7 @@
             "y": 0.4000000059604645,
             "z": -0.4000000059604645
         },
-        "id": 35,
+        "id": -1087224663,
         "intensity": 1.2549999952316284,
         "isChild": false,
         "light_type": 1,
@@ -1905,7 +1946,7 @@
             "y": 0.4000000059604645,
             "z": -0.4000000059604645
         },
-        "id": 36,
+        "id": -1087224663,
         "intensity": 1.2549999952316284,
         "isChild": false,
         "light_type": 1,
@@ -1942,7 +1983,7 @@
             "y": 0.4000000059604645,
             "z": -0.4000000059604645
         },
-        "id": 37,
+        "id": -1087224663,
         "intensity": 1.2549999952316284,
         "isChild": false,
         "light_type": 1,
@@ -1966,7 +2007,7 @@
         "type": "light"
     },
     {
-        "attenuation": 0.007000000216066837,
+        "attenuation": 0.004999999888241291,
         "color": {
             "a": 255.0,
             "b": 0.0,
@@ -1979,14 +2020,14 @@
             "y": 0.4000000059604645,
             "z": -0.4000000059604645
         },
-        "id": 38,
-        "intensity": 1.2549999952316284,
+        "id": -1087224663,
+        "intensity": 0.7250000238418579,
         "isChild": false,
         "light_type": 1,
         "name": "",
         "position": {
-            "x": -55.70063781738281,
-            "y": 23.30006980895996,
+            "x": -76.70032501220703,
+            "y": 13.300031661987305,
             "z": -29.100019454956055
         },
         "relativePosition": {
@@ -2016,8 +2057,8 @@
             "y": 0.4000000059604645,
             "z": -0.4000000059604645
         },
-        "id": 39,
-        "intensity": 1.2549999952316284,
+        "id": -1087224663,
+        "intensity": 0.8659999966621399,
         "isChild": false,
         "light_type": 1,
         "name": "",
