--- a/project.json
+++ b/project.json
@@ -2,15 +2,15 @@
     {
         "fovy": 60.0,
         "position": {
-            "x": -18.335145950317383,
-            "y": 10.797852516174316,
-            "z": -0.38022381067276
+            "x": -9.341361999511719,
+            "y": 8.267888069152832,
+            "z": -2.0746004581451416
         },
         "projection": 0,
         "target": {
-            "x": -8.809537887573242,
-            "y": 7.159833908081055,
-            "z": -0.22734671831130981
+            "x": 0.8240194320678711,
+            "y": 8.932500839233398,
+            "z": -1.6061387062072754
         },
         "type": "camera",
         "up": {
@@ -152,33 +152,33 @@
         "children": [
             [
                 {
-                    "attenuation": 0.039000000804662704,
+                    "attenuation": 0.007000000216066837,
                     "color": {
                         "a": 255.0,
-                        "b": 255.0,
-                        "g": 152.9160614013672,
-                        "r": 111.44445037841797
+                        "b": 61.490196228027344,
+                        "g": 126.14533233642578,
+                        "r": 140.0
                     },
-                    "cutOff": 10.0,
+                    "cutOff": 1.8367379491291107e-40,
                     "direction": {
-                        "x": 0.4000000059604645,
-                        "y": 0.4000000059604645,
-                        "z": -0.4000000059604645
+                        "x": 3.4184984738660352e+16,
+                        "y": 3.061136495317563e-41,
+                        "z": 0.0
                     },
-                    "id": 40,
-                    "intensity": 0.8130000233650208,
+                    "id": 1,
+                    "intensity": 0.5649999976158142,
                     "isChild": true,
                     "light_type": 1,
                     "name": "Light",
                     "position": {
-                        "x": 1.200002670288086,
-                        "y": 4.299997329711914,
-                        "z": 0.10000061243772507
+                        "x": 0.9999999403953552,
+                        "y": 4.300006866455078,
+                        "z": -1.0000001192092896
                     },
                     "relativePosition": {
-                        "x": 0.2000027298927307,
-                        "y": -9.5367431640625e-06,
-                        "z": 0.10000061243772507
+                        "x": 0.0,
+                        "y": 0.0,
+                        "z": 0.0
                     },
                     "specularStrength": 0.0,
                     "target": {
@@ -206,7 +206,7 @@
         "position": {
             "x": 0.9999999403953552,
             "y": 4.300006866455078,
-            "z": 0.0
+            "z": -1.0000001192092896
         },
         "relativePosition": {
             "x": 0.0,
@@ -1783,301 +1783,5 @@
             1.0
         ],
         "type": "entity"
-    },
-    {
-        "attenuation": 0.004999999888241291,
-        "color": {
-            "a": 255.0,
-            "b": 204.94444274902344,
-            "g": 117.50148010253906,
-            "r": 95.64073944091797
-        },
-        "cutOff": 10.0,
-        "direction": {
-            "x": 0.4000000059604645,
-            "y": 0.4000000059604645,
-            "z": -0.4000000059604645
-        },
-        "id": -1087224663,
-        "intensity": 0.4950000047683716,
-        "isChild": false,
-        "light_type": 1,
-        "name": "",
-        "position": {
-            "x": 4.0,
-            "y": 23.30006980895996,
-            "z": 3.0
-        },
-        "relativePosition": {
-            "x": 0,
-            "y": 0,
-            "z": 0
-        },
-        "specularStrength": 0.0,
-        "target": {
-            "x": 0,
-            "y": 0,
-            "z": 0
-        },
-        "type": "light"
-    },
-    {
-        "attenuation": 0.007000000216066837,
-        "color": {
-            "a": 255.0,
-            "b": 204.94444274902344,
-            "g": 117.50148010253906,
-            "r": 95.64073944091797
-        },
-        "cutOff": 10.0,
-        "direction": {
-            "x": 0.4000000059604645,
-            "y": 0.4000000059604645,
-            "z": -0.4000000059604645
-        },
-        "id": -1087224663,
-        "intensity": 1.2549999952316284,
-        "isChild": false,
-        "light_type": 1,
-        "name": "",
-        "position": {
-            "x": 4.0,
-            "y": 23.30006980895996,
-            "z": 43.79991149902344
-        },
-        "relativePosition": {
-            "x": 0,
-            "y": 0,
-            "z": 0
-        },
-        "specularStrength": 0.0,
-        "target": {
-            "x": 0,
-            "y": 0,
-            "z": 0
-        },
-        "type": "light"
-    },
-    {
-        "attenuation": 0.007000000216066837,
-        "color": {
-            "a": 255.0,
-            "b": 204.94444274902344,
-            "g": 117.50148010253906,
-            "r": 95.64073944091797
-        },
-        "cutOff": 10.0,
-        "direction": {
-            "x": 0.4000000059604645,
-            "y": 0.4000000059604645,
-            "z": -0.4000000059604645
-        },
-        "id": -1087224663,
-        "intensity": 1.2549999952316284,
-        "isChild": false,
-        "light_type": 1,
-        "name": "",
-        "position": {
-            "x": 77.49939727783203,
-            "y": 23.30006980895996,
-            "z": -60.89971160888672
-        },
-        "relativePosition": {
-            "x": 0,
-            "y": 0,
-            "z": 0
-        },
-        "specularStrength": 0.0,
-        "target": {
-            "x": 0,
-            "y": 0,
-            "z": 0
-        },
-        "type": "light"
-    },
-    {
-        "attenuation": 0.003000000026077032,
-        "color": {
-            "a": 255.0,
-            "b": 204.94444274902344,
-            "g": 117.50148010253906,
-            "r": 95.64073944091797
-        },
-        "cutOff": 10.0,
-        "direction": {
-            "x": 0.4000000059604645,
-            "y": 0.4000000059604645,
-            "z": -0.4000000059604645
-        },
-        "id": -1087224663,
-        "intensity": 1.2549999952316284,
-        "isChild": false,
-        "light_type": 1,
-        "name": "",
-        "position": {
-            "x": 77.49939727783203,
-            "y": 23.30006980895996,
-            "z": 43.79991149902344
-        },
-        "relativePosition": {
-            "x": 0,
-            "y": 0,
-            "z": 0
-        },
-        "specularStrength": 0.0,
-        "target": {
-            "x": 0,
-            "y": 0,
-            "z": 0
-        },
-        "type": "light"
-    },
-    {
-        "attenuation": 0.007000000216066837,
-        "color": {
-            "a": 255.0,
-            "b": 153.9444580078125,
-            "g": 0.0,
-            "r": 0.0
-        },
-        "cutOff": 10.0,
-        "direction": {
-            "x": 0.4000000059604645,
-            "y": 0.4000000059604645,
-            "z": -0.4000000059604645
-        },
-        "id": -1087224663,
-        "intensity": 1.2549999952316284,
-        "isChild": false,
-        "light_type": 1,
-        "name": "",
-        "position": {
-            "x": -43.10082244873047,
-            "y": 23.30006980895996,
-            "z": 43.099910736083984
-        },
-        "relativePosition": {
-            "x": 0,
-            "y": 0,
-            "z": 0
-        },
-        "specularStrength": 0.0,
-        "target": {
-            "x": 0,
-            "y": 0,
-            "z": 0
-        },
-        "type": "light"
-    },
-    {
-        "attenuation": 0.007000000216066837,
-        "color": {
-            "a": 255.0,
-            "b": 204.94444274902344,
-            "g": 117.50148010253906,
-            "r": 95.64073944091797
-        },
-        "cutOff": 10.0,
-        "direction": {
-            "x": 0.4000000059604645,
-            "y": 0.4000000059604645,
-            "z": -0.4000000059604645
-        },
-        "id": -1087224663,
-        "intensity": 1.2549999952316284,
-        "isChild": false,
-        "light_type": 1,
-        "name": "",
-        "position": {
-            "x": -15.200902938842773,
-            "y": 23.30006980895996,
-            "z": -60.89971160888672
-        },
-        "relativePosition": {
-            "x": 0,
-            "y": 0,
-            "z": 0
-        },
-        "specularStrength": 0.0,
-        "target": {
-            "x": 0,
-            "y": 0,
-            "z": 0
-        },
-        "type": "light"
-    },
-    {
-        "attenuation": 0.004999999888241291,
-        "color": {
-            "a": 255.0,
-            "b": 0.0,
-            "g": 0.0,
-            "r": 153.9444580078125
-        },
-        "cutOff": 10.0,
-        "direction": {
-            "x": 0.4000000059604645,
-            "y": 0.4000000059604645,
-            "z": -0.4000000059604645
-        },
-        "id": -1087224663,
-        "intensity": 0.7250000238418579,
-        "isChild": false,
-        "light_type": 1,
-        "name": "",
-        "position": {
-            "x": -76.70032501220703,
-            "y": 13.300031661987305,
-            "z": -29.100019454956055
-        },
-        "relativePosition": {
-            "x": 0,
-            "y": 0,
-            "z": 0
-        },
-        "specularStrength": 0.0,
-        "target": {
-            "x": 0,
-            "y": 0,
-            "z": 0
-        },
-        "type": "light"
-    },
-    {
-        "attenuation": 0.007000000216066837,
-        "color": {
-            "a": 255.0,
-            "b": 153.9444580078125,
-            "g": 0.0,
-            "r": 0.0
-        },
-        "cutOff": 10.0,
-        "direction": {
-            "x": 0.4000000059604645,
-            "y": 0.4000000059604645,
-            "z": -0.4000000059604645
-        },
-        "id": -1087224663,
-        "intensity": 0.8659999966621399,
-        "isChild": false,
-        "light_type": 1,
-        "name": "",
-        "position": {
-            "x": -77.00031280517578,
-            "y": 23.30006980895996,
-            "z": 15.500057220458984
-        },
-        "relativePosition": {
-            "x": 0,
-            "y": 0,
-            "z": 0
-        },
-        "specularStrength": 0.0,
-        "target": {
-            "x": 0,
-            "y": 0,
-            "z": 0
-        },
-        "type": "light"
     }
 ]
