--- a/project.json
+++ b/project.json
@@ -2,15 +2,15 @@
     {
         "fovy": 60.0,
         "position": {
-            "x": 17.03638458251953,
-            "y": 34.162837982177734,
-            "z": -25.885883331298828
+            "x": 9.088813781738281,
+            "y": 6.608956336975098,
+            "z": -0.7478213906288147
         },
         "projection": 0,
         "target": {
-            "x": 14.310601234436035,
-            "y": 29.207599639892578,
-            "z": -17.399669647216797
+            "x": -30.186248779296875,
+            "y": -24.24401092529297,
+            "z": 1.6115119457244873
         },
         "type": "camera",
         "up": {
@@ -22,40 +22,99 @@
     {
         "ambientColor": {
             "w": 1.0,
-            "x": 0.0,
-            "y": 0.0,
-            "z": 0.0
+            "x": 1.0,
+            "y": 1.0,
+            "z": 1.0
         },
         "bloom": false,
         "bloomBrightness": 0.0,
         "bloomSamples": 3.0,
         "skyboxColor": {
             "w": 1.0,
-            "x": 0.0,
-            "y": 0.0,
-            "z": 0.0
+            "x": 1.0,
+            "y": 1.0,
+            "z": 1.0
         },
         "skyboxPath": "assets/images/skybox/default skybox.hdr",
         "type": "world settings"
     },
     {
+        "children": [
+            [
+                {
+                    "collider": true,
+                    "collider_type": 2,
+                    "damping": 0.0,
+                    "friction": 1.0,
+                    "id": 0,
+                    "is_dynamic": false,
+                    "lodEnabled": true,
+                    "mass": 1.0,
+                    "material_path": "",
+                    "mesh_type": 1,
+                    "model_path": "",
+                    "name": "Unnamed Entity",
+                    "normalTexturePath": "",
+                    "position": {
+                        "x": 0.0,
+                        "y": 0.0,
+                        "z": 0.0
+                    },
+                    "relativePosition": {
+                        "x": 0.0,
+                        "y": 0.0,
+                        "z": -8.099995613098145
+                    },
+                    "rotation": {
+                        "x": 0.0,
+                        "y": 0.0,
+                        "z": 0.0
+                    },
+                    "roughnessTexturePath": "",
+                    "scale": {
+                        "x": 1.0,
+                        "y": 1.0,
+                        "z": 1.0
+                    },
+                    "script_index": "",
+                    "script_path": "",
+                    "surface_material": {
+                        "DiffuseIntensity": 0.5,
+                        "Roughness": 0.5,
+                        "SpecularIntensity": 0.5,
+                        "SpecularTint": {
+                            "x": 1.0,
+                            "y": 1.0,
+                            "z": 1.0
+                        },
+                        "shininess": 0.5
+                    },
+                    "texturePath": "",
+                    "tiling": [
+                        1.0,
+                        1.0
+                    ],
+                    "type": "entity"
+                }
+            ]
+        ],
         "collider": true,
-        "collider_type": 0,
+        "collider_type": 2,
         "damping": 0.0,
         "friction": 1.0,
         "id": 1,
-        "is_dynamic": true,
+        "is_dynamic": false,
         "lodEnabled": true,
         "mass": 1.0,
-        "material_path": "project/game/materials/file2.mat",
+        "material_path": "",
         "mesh_type": 1,
         "model_path": "",
-        "name": "Player",
+        "name": "Unnamed Entity",
         "normalTexturePath": "",
         "position": {
             "x": 0.0,
-            "y": 17.200056076049805,
-            "z": 0.0
+            "y": 0.0,
+            "z": 8.099995613098145
         },
         "relativePosition": {
             "x": 0.0,
@@ -72,61 +131,6 @@
             "x": 1.0,
             "y": 1.0,
             "z": 1.0
-        },
-        "script_index": "player0",
-        "script_path": "project/game/scripts/player.py",
-        "surface_material": {
-            "DiffuseIntensity": 1.0,
-            "Roughness": 0.42500001192092896,
-            "SpecularIntensity": 0.0,
-            "SpecularTint": {
-                "x": 1.0,
-                "y": 1.0,
-                "z": 1.0
-            },
-            "shininess": 1.0
-        },
-        "texturePath": "",
-        "tiling": [
-            1.0,
-            1.0
-        ],
-        "type": "entity"
-    },
-    {
-        "collider": true,
-        "collider_type": 0,
-        "damping": 0.0,
-        "friction": 1.0,
-        "id": 0,
-        "is_dynamic": false,
-        "lodEnabled": true,
-        "mass": 1.0,
-        "material_path": "",
-        "mesh_type": 1,
-        "model_path": "",
-        "name": "Planet",
-        "normalTexturePath": "",
-        "position": {
-            "x": 0.0,
-            "y": 0.0,
-            "z": 0.0
-        },
-        "relativePosition": {
-            "x": 0.0,
-            "y": 0.0,
-            "z": 0.0
-        },
-        "rotation": {
-            "x": 0.0,
-            "y": 0.0,
-            "z": 0.0
-        },
-        "roughnessTexturePath": "",
-        "scale": {
-            "x": 24.0,
-            "y": 24.0,
-            "z": 24.0
         },
         "script_index": "",
         "script_path": "",
@@ -158,18 +162,18 @@
         },
         "cutOff": 10.0,
         "direction": {
-            "x": 0.8299999833106995,
-            "y": -1.0,
-            "z": 1.0
+            "x": 0.4000000059604645,
+            "y": 0.4000000059604645,
+            "z": -0.4000000059604645
         },
-        "id": 2,
-        "intensity": 1.7410000562667847,
+        "id": 3,
+        "intensity": 0.5,
         "isChild": false,
         "light_type": 1,
         "name": "Light",
         "position": {
             "x": 4.0,
-            "y": 27.100051879882813,
+            "y": 5.0,
             "z": 3.0
         },
         "relativePosition": {
