--- a/project.json
+++ b/project.json
@@ -2,15 +2,15 @@
     {
         "fovy": 60.0,
         "position": {
-            "x": 9.088813781738281,
-            "y": 6.608956336975098,
-            "z": -0.7478213906288147
+            "x": 50.0,
+            "y": 0.0,
+            "z": 0.0
         },
         "projection": 0,
         "target": {
-            "x": -30.186248779296875,
-            "y": -24.24401092529297,
-            "z": 1.6115119457244873
+            "x": 0.0,
+            "y": 0.0,
+            "z": 0.0
         },
         "type": "camera",
         "up": {
@@ -26,7 +26,7 @@
             "y": 1.0,
             "z": 1.0
         },
-        "bloom": false,
+        "bloom": true,
         "bloomBrightness": 0.0,
         "bloomSamples": 3.0,
         "skyboxColor": {
@@ -39,70 +39,11 @@
         "type": "world settings"
     },
     {
-        "children": [
-            [
-                {
-                    "collider": true,
-                    "collider_type": 2,
-                    "damping": 0.0,
-                    "friction": 1.0,
-                    "id": 0,
-                    "is_dynamic": false,
-                    "lodEnabled": true,
-                    "mass": 1.0,
-                    "material_path": "",
-                    "mesh_type": 1,
-                    "model_path": "",
-                    "name": "Unnamed Entity",
-                    "normalTexturePath": "",
-                    "position": {
-                        "x": 0.0,
-                        "y": 0.0,
-                        "z": 0.0
-                    },
-                    "relativePosition": {
-                        "x": 0.0,
-                        "y": 0.0,
-                        "z": -8.099995613098145
-                    },
-                    "rotation": {
-                        "x": 0.0,
-                        "y": 0.0,
-                        "z": 0.0
-                    },
-                    "roughnessTexturePath": "",
-                    "scale": {
-                        "x": 1.0,
-                        "y": 1.0,
-                        "z": 1.0
-                    },
-                    "script_index": "",
-                    "script_path": "",
-                    "surface_material": {
-                        "DiffuseIntensity": 0.5,
-                        "Roughness": 0.5,
-                        "SpecularIntensity": 0.5,
-                        "SpecularTint": {
-                            "x": 1.0,
-                            "y": 1.0,
-                            "z": 1.0
-                        },
-                        "shininess": 0.5
-                    },
-                    "texturePath": "",
-                    "tiling": [
-                        1.0,
-                        1.0
-                    ],
-                    "type": "entity"
-                }
-            ]
-        ],
         "collider": true,
         "collider_type": 2,
         "damping": 0.0,
         "friction": 1.0,
-        "id": 1,
+        "id": 0,
         "is_dynamic": false,
         "lodEnabled": true,
         "mass": 1.0,
@@ -114,7 +55,7 @@
         "position": {
             "x": 0.0,
             "y": 0.0,
-            "z": 8.099995613098145
+            "z": 0.0
         },
         "relativePosition": {
             "x": 0.0,
@@ -134,7 +75,7 @@
         },
         "script_index": "",
         "script_path": "",
-        "surface_material": {
+        "surfaceMaterial": {
             "DiffuseIntensity": 0.5,
             "Roughness": 0.5,
             "SpecularIntensity": 0.5,
@@ -166,7 +107,7 @@
             "y": 0.4000000059604645,
             "z": -0.4000000059604645
         },
-        "id": 3,
+        "id": 2,
         "intensity": 0.5,
         "isChild": false,
         "light_type": 1,
