--- a/project.json
+++ b/project.json
@@ -2,15 +2,15 @@
     {
         "fovy": 60.0,
         "position": {
-            "x": 34.979610443115234,
-            "y": 29.336944580078125,
-            "z": -13.005855560302734
+            "x": 34.236167907714844,
+            "y": 22.483295440673828,
+            "z": 6.113238334655762
         },
         "projection": 0,
         "target": {
-            "x": 26.24351692199707,
-            "y": 26.790281295776367,
-            "z": -8.402048110961914
+            "x": 25.154987335205078,
+            "y": 17.843050003051758,
+            "z": 6.113258361816406
         },
         "type": "camera",
         "up": {
@@ -31,11 +31,11 @@
         "bloomSamples": 3.0,
         "skyboxColor": {
             "w": 1.0,
-            "x": 0.0723884105682373,
-            "y": 0.042237721383571625,
-            "z": 0.1413043737411499
+            "x": 1.0,
+            "y": 1.0,
+            "z": 1.0
         },
-        "skyboxPath": "assets/images/skybox/default skybox.hdr",
+        "skyboxPath": "project/game/images/kloppenheim_02_puresky_4k.hdr",
         "type": "world settings"
     },
     {
