--- a/Templates/Orbit/project.json
+++ b/Templates/Orbit/project.json
@@ -2,15 +2,15 @@
     {
         "fovy": 60.0,
         "position": {
-            "x": 17.03638458251953,
-            "y": 34.162837982177734,
-            "z": -25.885883331298828
+            "x": 47.34920883178711,
+            "y": 30.612028121948242,
+            "z": 8.234254837036133
         },
         "projection": 0,
         "target": {
-            "x": 14.310601234436035,
-            "y": 29.207599639892578,
-            "z": -17.399669647216797
+            "x": 37.85772705078125,
+            "y": 26.901567459106445,
+            "z": 7.854425430297852
         },
         "type": "camera",
         "up": {
@@ -31,11 +31,11 @@
         "bloomSamples": 3.0,
         "skyboxColor": {
             "w": 1.0,
-            "x": 0.0,
-            "y": 0.0,
-            "z": 0.0
+            "x": 1.0,
+            "y": 1.0,
+            "z": 1.0
         },
-        "skyboxPath": "assets/images/skybox/default skybox.hdr",
+        "skyboxPath": "project/game/images/kloppenheim_02_puresky_4k.hdr",
         "type": "world settings"
     },
     {
@@ -73,9 +73,9 @@
             "y": 1.0,
             "z": 1.0
         },
-        "script_index": "player0",
+        "scriptIndex": "player0",
         "script_path": "project/game/scripts/player.py",
-        "surface_material": {
+        "surfaceMaterial": {
             "DiffuseIntensity": 1.0,
             "Roughness": 0.42500001192092896,
             "SpecularIntensity": 0.0,
@@ -128,9 +128,9 @@
             "y": 24.0,
             "z": 24.0
         },
-        "script_index": "",
+        "scriptIndex": "",
         "script_path": "",
-        "surface_material": {
+        "surfaceMaterial": {
             "DiffuseIntensity": 0.5,
             "Roughness": 0.5,
             "SpecularIntensity": 0.5,
@@ -177,7 +177,7 @@
             "y": 0,
             "z": 0
         },
-        "specularStrength": 0.5,
+        "specularStrength": 0.0,
         "target": {
             "x": 0,
             "y": 0,
