--- a/.gitmodules
+++ b/.gitmodules
@@ -27,3 +27,6 @@
 [submodule "include/bullet3"]
 	path = include/bullet3
 	url = https://github.com/bulletphysics/bullet3.git
+[submodule "include/glm"]
+	path = include/glm
+	url = https://github.com/g-truc/glm.git
