Added position to Inspector.Text.cpp

--- a/project.json
+++ b/project.json
@@ -2,15 +2,15 @@
     {
         "fovy": 60.0,
         "position": {
-            "x": 47.34920883178711,
-            "y": 30.612028121948242,
-            "z": 8.234254837036133
+            "x": 40.400264739990234,
+            "y": 35.696903228759766,
+            "z": 11.610795021057129
         },
         "projection": 0,
         "target": {
-            "x": 37.85772705078125,
-            "y": 26.901567459106445,
-            "z": 7.854425430297852
+            "x": 30.714599609375,
+            "y": 32.51424026489258,
+            "z": 11.368635177612305
         },
         "type": "camera",
         "up": {
@@ -95,7 +95,7 @@
     },
     {
         "collider": true,
-        "collider_type": 0,
+        "collider_type": 1,
         "damping": 0.0,
         "friction": 1.0,
         "id": 0,
@@ -184,5 +184,31 @@
             "z": 0
         },
         "type": "light"
+    },
+    {
+        "background color": {
+            "a": 0,
+            "b": 0,
+            "g": 0,
+            "r": 0
+        },
+        "background roundiness": 0.0,
+        "color": {
+            "a": 255,
+            "b": 255,
+            "g": 255,
+            "r": 255
+        },
+        "font size": 55.5099983215332,
+        "name": "Text",
+        "padding": 25.0,
+        "position": {
+            "x": 10.0,
+            "y": 10.0,
+            "z": 1.0
+        },
+        "spacing": 4.0,
+        "text": "In Orbit - Template",
+        "type": "text"
     }
 ]
